<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.wizos.billing.ChargeActivity"
    android:id="@+id/charge"
    android:clickable="true"
    android:onClick="onClickedHideIME"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background"
        android:id="@+id/background"/>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_charge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="#3e9ed1"
        android:theme="@style/AppTheme.AppBarOverlay">
        <Button
            android:id="@+id/payout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payout"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/income"
            android:background="@android:color/transparent"/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:id="@+id/moneyShow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#ffffff"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:layout_below="@id/app_bar_charge">
        <ImageView
            android:id="@+id/moneyShow_Icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:src="@drawable/payout_0"
            android:contentDescription="@string/chooseIcon"
             />
        <TextView
            android:id="@+id/moneyShow_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:layout_gravity="right|center"
            android:gravity="right|center_vertical"
            android:textSize="20sp"
            android:textColor="#121212"
            android:hint="@string/moneyHint"
            android:textColorHint="#c6c6c6"
            android:scrollHorizontally="true"/>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/moneyShow"
        android:persistentDrawingCache="animation"
        android:background="#fcfcfc"/>
    <ImageView
        android:id="@+id/divider"
        android:layout_below="@id/moneyShow"
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="#e9e9e9"/>
    <LinearLayout
        android:layout_below="@id/viewPager"
        android:id="@+id/dial"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:background="#fcfcfc">
        <ImageView
            android:id="@+id/dial_Payout_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:paddingRight="5dp"
            android:src="@drawable/dial_state_1" />
        <ImageView
            android:id="@+id/dial_Income_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:paddingLeft="5dp"
            android:src="@drawable/dial_state_0" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/editBar"
        android:layout_below="@id/dial"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/choosedate"
            android:onClick="show_pickerview"/>
        <Spinner
            android:id="@+id/spinner"
            android:spinnerMode="dropdown"
            style="STYLE_CLASS_ARROWS_ON_LEFT_HORIZONTAL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:layout_width="66dp"
            android:textColor="#838383" />
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="时间"/>-->
        <EditText
            android:id="@+id/remark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:scrollHorizontally="true"
            android:background="@null"
            android:textColor="#a4a4a4"
            android:textSize="14sp"
            android:hint="@string/remark"
            tools:hint="@string/remark"
            android:textCursorDrawable="@null"/>
        <!-- textCursorDrawable 属性是用来控制光标颜色的 -->
        <!--android:focusableInTouchMode="false"-->
    </LinearLayout>

    <!--<ImageView-->
        <!--android:id="@+id/line"-->
        <!--android:layout_below="@id/dial"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:layout_marginRight="50dp"-->
        <!--android:background="#e9e9e9"/>-->
    <include layout="@layout/keyboard"
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentBottom="true" />

    <android.inputmethodservice.KeyboardView
    android:layout_width="match_parent"
    android:layout_height="60dp" />

</RelativeLayout>
